Implemented EPIC-2 (transactions). Also updated swagger and postman documentation.
